# glacierkit

./: .eslintrc.cjs  .prettierignore  .prettierrc  README.md  copyThings.bat  package.json  svelte.config.js  tailwind.config.cjs  updates.json
.github/ISSUE_TEMPLATE/: idea.md  issue-report.md
.github/actions/update-versions/: action.yml
.github/workflows/: build.yml  release.yml  rust-clippy.yml
src/: app.css  app.d.ts  app.html  treeview.css
src-tauri/: Cargo.toml  build.rs  icon.afpub  rustfmt.toml  tauri.conf.json
src-tauri/ResourceLib/: ResourceLib_HM2.lib  ResourceLib_HM2016.lib  ResourceLib_HM3.lib  ResourceLib_HMA.lib
src-tauri/ResourceLib/ResourceLib-linux-x64/Include/: ResourceLib.h  ResourceLibCommon.h
src-tauri/ResourceLib/ResourceLib-win-x64/: ResourceLib_HM2.lib  ResourceLib_HM2016.lib  ResourceLib_HM3.lib  ResourceLib_HMA.lib
src-tauri/assets/: Classes missing pins.txt  pins.json  templates.json  uicbPropTypes.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/macros/: Cargo.toml
src-tauri/macros/src/: lib.rs
src-tauri/src/: biome.rs  editor_connection.rs  entity.rs  game_detection.rs  general.rs  hash_list.rs  intellisense.rs  languages.rs  main.rs  material.rs  model.rs  ores.rs  ores_repo.rs  repository.rs  rpkg.rs  rpkg_tool.rs  show_in_folder.rs  wwev.rs
src-tauri/src/event_handling/: content_search.rs  entity_metadata.rs  entity_monaco.rs  entity_overrides.rs  entity_tree.rs  mod.rs  repository_patch.rs  resource_overview.rs  tools.rs  unlockables_patch.rs
src-tauri/src/event_handling/entity/: general.rs  meta_pane.rs  metadata.rs  mod.rs  monaco.rs  overrides.rs  tree.rs
src-tauri/src/resourcelib/: bindings_2.rs  bindings_2016.rs  bindings_3.rs  mod.rs
src/lib/: bindings-types.ts  bindings.ts  crc32.js  helpray.ts  shortcut.ts  utils.ts
src/lib/components/: HelpRay.svelte  ListEditor.svelte  MeshPreview.svelte  MultiWaveformPlayer.svelte  ToolButton.svelte  WaveformPlayer.svelte
src/lib/editors/contentsearchresults/: ContentSearchResultsEditor.svelte
src/lib/editors/entity/: EntityEditor.svelte  GraphRenderer.svelte  HighlightMonaco.svelte  MetaPane.svelte  Metadata.svelte  Monaco.svelte  OverrideMonaco.svelte  Overrides.svelte  Tree.svelte  enums.json  property-type-schemas.json  utils.ts
src/lib/editors/meta/: MetaEditor.svelte
src/lib/editors/nil/: NilEditor.svelte
src/lib/editors/quickstart/: QuickStartEditor.svelte
src/lib/editors/repositorypatch/: RepositoryPatchEditor.svelte
src/lib/editors/resourceoverview/: Monaco.svelte  ResourceOverviewEditor.svelte
src/lib/editors/text/: Monaco.svelte  TextEditor.svelte
src/lib/editors/unlockablespatch/: Monaco.svelte  UnlockablesPatchEditor.svelte
src/lib/editors/welcome/: WelcomeEditor.svelte
src/lib/tools/: ContentSearch.svelte  FileBrowser.svelte  GameBrowser.svelte  Settings.svelte  TextTransformer.svelte
src/routes/: +layout.svelte  +page.svelte
