[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = { version = "1.0.110", features = ["preserve_order"] }
serde = { version = "1.0.194", features = ["derive"] }
tauri = { version = "1.5.4", features = ["api-all", "devtools"] }
structstruck = "0.4.1"
tryvial = "0.2.0"
specta = { version = "=2.0.0-rc.7", features = [
    "url",
    "uuid",
    "export",
    "indexmap",
] }
tauri-specta = { version = "=2.0.0-rc.4", features = ["typescript"] }
anyhow = "1.0.79"
fn-error-context = "0.2.1"
uuid = { version = "1.6.1", features = ["serde"] }
tokio = "1.35.1"
walkdir = "2.4.0"
registry = "1.2.3"
keyvalues-serde = "0.2.1"
itertools = "0.12.0"
arc-swap = { version = "1.6.0", features = ["serde"] }
serde-smile = "0.2.0"
brotli-decompressor = "2.5.1"
reqwest = "0.11.23"
trash = "3.1.2"
notify = { version = "6.1.1", default-features = false, features = [
    "macos_fsevent",
] }
quickentity-rs = { path = "../../quickentity-rs" }
lazy_static = "1.4.0"
velcro = "0.5.4"
indexmap = "2.1.0"
arboard = "3.3.0"
rand = "0.8.5"
rpkg-rs = { path = "../../rpkg-rs" }
rfd = "0.10.0"
async-recursion = "1.0.5"
parking_lot = "0.12.1"
rayon = "1.8.0"
enumset = { version = "1.1.3", features = ["serde"] }
tauri-plugin-aptabase = "0.5.1"
image = "0.25.1"
hex = "0.4.3"
serde_with = "3.7.0"
json-patch = "1.2.0"
futures-util = "0.3.30"
md5 = "0.7.0"
dashmap = { version = "5.5.3", features = ["inline", "rayon"] }
measure_time = "0.8.2"
tex-rs = { path = "../../GlacierFormats-rs/tex-rs" }
hashbrown = { version = "0.14.3", features = ["rayon", "serde"] }
regex = "1.10.4"
hrtime = "0.2.0"
async-trait = "0.1.80"
tokio-tungstenite = "0.21.0"
serde_path_to_error = "0.1.16"
debounced = "0.1.0"
notify-debouncer-full = "0.3.1"
tokio-stream = "0.1.15"

[target.'cfg(linux)'.dependencies]
fork = "0.1.22"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
