[package]
name = "app"
version = "1.8.0"
description = "An integrated modding tool for the HITMAN World of Assassination trilogy."
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[build-dependencies.tauri-build]
version = "1.5.1"
features = []

[dependencies]
structstruck = "0.4.1"
tryvial = "0.2.0"
anyhow = "1.0.79"
fn-error-context = "0.2.1"
tokio = "1.35.1"
walkdir = "2.4.0"
registry = "1.2.3"
keyvalues-serde = "0.2.1"
itertools = "0.12.0"
serde-smile = "0.2.0"
brotli-decompressor = "2.5.1"
reqwest = "0.11.23"
trash = "3.1.2"
velcro = "0.5.4"
indexmap = "2.1.0"
arboard = "3.3.0"
rand = "0.8.5"
rpkg-rs = "1.0.0-rc.1"
async-recursion = "1.0.5"
parking_lot = "0.12.1"
rayon = "1.8.0"
tauri-plugin-aptabase = "0.5.1"
image = "0.25.1"
hex = "0.4.3"
serde_with = "3.7.0"
json-patch = "1.2.0"
futures-util = "0.3.30"
md5 = "0.7.0"
measure_time = "0.8.2"
regex = "1.10.4"
hrtime = "0.2.0"
async-trait = "0.1.80"
tokio-tungstenite = "0.21.0"
serde_path_to_error = "0.1.16"
debounced = "0.1.0"
notify-debouncer-full = "0.3.1"
tokio-stream = "0.1.15"
log = "0.4.21"
biome_json_formatter = "0.5.7"
biome_json_parser = "0.5.7"
biome_formatter = "0.5.7"
os_info = "3.8.2"
derivative = "2.2.0"
home = "0.5.9"

[dependencies.snmalloc-rs]
version = "0.3.6"
features = ["lto"]

[dependencies.hitman-commons]
git = "https://github.com/atampy25/hitman-commons"
features = ["serde", "specta", "rpkg-rs", "tex-rs", "tonytools", "resourcelib", "hash_list"]

[dependencies.hitman-formats]
git = "https://github.com/atampy25/hitman-formats"
features = ["material", "ores", "wwev", "serde"]

[dependencies.serde_json]
version = "1.0.110"
features = ["preserve_order"]

[dependencies.serde]
version = "1.0.194"
features = ["derive"]

[dependencies.tauri]
version = "1.5.4"
features = ["api-all", "devtools", "updater"]

[dependencies.specta]
version = "=2.0.0-rc.7"
features = ["url", "uuid", "export", "indexmap"]

[dependencies.tauri-specta]
version = "=2.0.0-rc.4"
features = ["typescript"]

[dependencies.uuid]
version = "1.6.1"
features = ["serde"]

[dependencies.arc-swap]
version = "1.6.0"
features = ["serde"]

[dependencies.notify]
version = "6.1.1"
default-features = false
features = ["macos_fsevent"]

[dependencies.quickentity-rs]
git = "https://github.com/atampy25/quickentity-rs"

[dependencies.enumset]
version = "1.1.3"
features = ["serde"]

[dependencies.dashmap]
version = "5.5.3"
features = ["inline", "rayon"]

[dependencies.tex-rs]
git = "https://github.com/dafitius/GlacierFormats-rs"

[dependencies.prim-rs]
git = "https://github.com/dafitius/GlacierFormats-rs"

[dependencies.hashbrown]
version = "0.14.3"
features = ["rayon", "serde"]

[dependencies.tonytools]
git = "https://github.com/AnthonyFuller/tonytools-rs"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"

[target."cfg(unix)".dependencies]
fork = "0.1.22"

[features]
custom-protocol = ["tauri/custom-protocol"]
