[package]
name = "app"
version = "1.11.1"
description = "An integrated modding tool for the HITMAN World of Assassination trilogy."
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[build-dependencies.tauri-build]
version = "1.5.1"
features = []

[dependencies]
structstruck = "0.4.1"
tryvial = "0.2.0"
anyhow = "1.0.95"
fn-error-context = "0.2.1"
tokio = "1.43.0"
walkdir = "2.4.0"
registry = "1.3.0"
keyvalues-serde = "0.2.2"
itertools = "0.14.0"
serde-smile = "0.2.2"
brotli-decompressor = "4.0.2"
trash = "5.2.1"
velcro = "0.5.4"
indexmap = "2.7.1"
arboard = "3.3.0"
rand = "0.9.0"
rpkg-rs = "1.2.0"
async-recursion = "1.0.5"
parking_lot = "0.12.1"
rayon = "1.10.0"
tauri-plugin-aptabase = "0.5.1"
image = "0.25.5"
hex = "0.4.3"
serde_with = "3.12.0"
json-patch = "3.0.1"
futures-util = "0.3.31"
md5 = "0.7.0"
measure_time = "0.9.0"
regex = "1.10.4"
hrtime = "0.2.0"
async-trait = "0.1.86"
tokio-tungstenite = "0.26.1"
serde_path_to_error = "0.1.16"
debounced = "0.2.0"
notify-debouncer-full = "0.5.0"
tokio-stream = "0.1.17"
log = "0.4.25"
biome_json_formatter = "0.5.7"
biome_json_parser = "0.5.7"
biome_formatter = "0.5.7"
biome_rowan = "=0.5.7"
biome_parser = "=0.5.7"
biome_unicode_table = "=0.5.7"
os_info = "3.9.2"
home = "0.5.11"

[dependencies.reqwest]
version = "0.12.12"
features = ["json"]

[dependencies.derive_more]
version = "2.0.1"
features = ["debug"]

[dependencies.hitman-commons]
git = "https://github.com/atampy25/hitman-commons"
features = ["serde", "specta", "rpkg-rs", "glacier-texture", "tonytools", "resourcelib", "hash_list", "game_detection"]

[dependencies.hitman-formats]
git = "https://github.com/atampy25/hitman-formats"
features = ["material", "ores", "wwev", "serde", "sdef"]

[dependencies.serde_json]
version = "1.0.138"
features = ["preserve_order"]

[dependencies.serde]
version = "1.0.194"
features = ["derive"]

[dependencies.tauri]
version = "1.5.4"
features = ["api-all", "devtools", "updater"]

[dependencies.specta]
version = "=2.0.0-rc.7"
features = ["url", "uuid", "export", "indexmap"]

[dependencies.tauri-specta]
version = "=2.0.0-rc.4"
features = ["typescript"]

[dependencies.uuid]
version = "1.12.1"
features = ["serde"]

[dependencies.arc-swap]
version = "1.6.0"
features = ["serde"]

[dependencies.notify]
version = "8.0.0"
default-features = false
features = ["macos_fsevent"]

[dependencies.quickentity-rs]
git = "https://github.com/atampy25/quickentity-rs"

[dependencies.enumset]
version = "1.1.3"
features = ["serde"]

[dependencies.dashmap]
version = "6.1.0"
features = ["inline", "rayon"]

[dependencies.glacier-texture]
version = "1.0.0"

[dependencies.prim-rs]
git = "https://github.com/dafitius/GlacierFormats-rs"

[dependencies.hashbrown]
version = "0.14.5"
features = ["rayon", "serde"]

[dependencies.tonytools]
git = "https://github.com/AnthonyFuller/tonytools-rs"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"

[target."cfg(unix)".dependencies]
fork = "0.2.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
